--- a/bootcamp/materials/1-dimensional-data-modeling/example.env
+++ b/bootcamp/materials/1-dimensional-data-modeling/example.env
@@ -1,7 +1,7 @@
 POSTGRES_SCHEMA=postgres
 POSTGRES_USER=postgres
 POSTGRES_DB=postgres
-POSTGRES_PASSWORD=postgres
+POSTGRES_PASSWORD=9291
 
 HOST_PORT=5432
 CONTAINER_PORT=5432
